--- a/src/main/resources/templates/mlog/article.html
+++ b/src/main/resources/templates/mlog/article.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table id="article_table" class="table-sm table-hover table-borderless mb-3">
+                                    <table id="article_table" class="table-sm mb-3">
                                     </table>
                                     <nav aria-label="Page navigation example">
                                         <ul id="pagination" class="pagination pagination-circle"></ul>
