--- a/src/main/resources/templates/mlog/index.html
+++ b/src/main/resources/templates/mlog/index.html
@@ -22,19 +22,20 @@
 
     </div>
     <div class="page-holder w-100 d-flex flex-wrap">
-        <div class="container-fluid px-xl-5">
-            <section class="py-5">
+        <div class="container-fluid px-xl-4">
+            <section class="py-4">
                 <div class="row">
                     <div class="col-xl-2 col-lg-6 mb-4 mb-xl-0">
                         <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
                             <div class="flex-grow-1 d-flex align-items-center">
-                                <div class="dot mr-3 bg-blue"></div>
+                                <div class="dot mr-3 bg-danger"></div>
                                 <div class="text">
                                     <a href="/mlog/publish" target="_blank">
-                                        <h5 class="mb-0">发布 文章</h5></a>
+                                        <h6 class="mb-0">发布 文章</h6>
+                                        <span class="text-gray">publish </span></a>
                                 </div>
                             </div>
-<!--                            <div class="icon text-white bg-blue"><i class="fas fa-file-word"></i></div>-->
+                            <div class="icon text-white bg-danger"><i class="fas fa-file-word"></i></div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-6 mb-4 mb-xl-0">
@@ -43,7 +44,7 @@
                                 <div class="dot mr-3 bg-warning"></div>
                                 <div class="text">
 
-                                    <h6 class="mb-0">文章 总数</h6><span class="text-gray">145,14 </span>
+                                    <h6 class="mb-0">文章 总数</h6><span class="text-gray article">145,14 </span>
 
                                 </div>
                             </div>
@@ -56,7 +57,7 @@
                                 <div class="dot mr-3 bg-primary"></div>
                                 <div class="text">
 
-                                    <h6 class="mb-0">评论 总数</h6><span class="text-gray">145,14 </span>
+                                    <h6 class="mb-0">评论 总数</h6><span class="text-gray comment">145,14 </span>
 
                                 </div>
                             </div>
@@ -68,7 +69,7 @@
                             <div class="flex-grow-1 d-flex align-items-center">
                                 <div class="dot mr-3 bg-green"></div>
                                 <div class="text">
-                                    <h6 class="mb-0">访客 总数</h6><span class="text-gray">32</span>
+                                    <h6 class="mb-0">友链 总数</h6><span class="text-gray links">32</span>
                                 </div>
                             </div>
                             <div class="icon text-white bg-green"><i class="fas fa-user-friends"></i></div>
@@ -79,7 +80,7 @@
                             <div class="flex-grow-1 d-flex align-items-center">
                                 <div class="dot mr-3 bg-violet"></div>
                                 <div class="text">
-                                    <h6 class="mb-0">浏览 总数</h6><span class="text-gray">32</span>
+                                    <h6 class="mb-0">浏览 总数</h6><span class="text-gray view">32</span>
                                 </div>
                             </div>
                             <div class="icon text-white bg-violet"><i class="far fa-eye"></i></div>
@@ -89,12 +90,12 @@
                     <div class="col-xl-2 col-lg-6 mb-4 mb-xl-0">
                         <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
                             <div class="flex-grow-1 d-flex align-items-center">
-                                <div class="dot mr-3 bg-green"></div>
+                                <div class="dot mr-3 bg-red"></div>
                                 <div class="text">
-                                    <h6 class="mb-0">建站 天数</h6><span class="text-gray">123</span>
+                                    <h6 class="mb-0">建站 天数</h6><span class="text-gray day">123</span>
                                 </div>
                             </div>
-                            <div class="icon text-white bg-green"><i class="fas fa-calendar"></i></div>
+                            <div class="icon text-white bg-red"><i class="fas fa-calendar"></i></div>
                         </div>
                     </div>
                 </div>
@@ -120,7 +121,7 @@
                             <div class="card-body">
                                 <div class="row align-items-center flex-row">
                                     <div class="col-lg-5">
-                                        <h2 class="mb-0 d-flex align-items-center"><span>86.4</span><span
+                                        <h2 class="mb-0 d-flex align-items-center"><span class="life">86.4</span><span
                                                 class="dot bg-green d-inline-block ml-3"></span></h2><span
                                             class="text-muted text-uppercase small">生活类文章</span>
                                         <hr>
@@ -136,7 +137,7 @@
                             <div class="card-body">
                                 <div class="row align-items-center flex-row">
                                     <div class="col-lg-5">
-                                        <h2 class="mb-0 d-flex align-items-center"><span>1.724</span><span
+                                        <h2 class="mb-0 d-flex align-items-center"><span class="skill">1.724</span><span
                                                 class="dot bg-violet d-inline-block ml-3"></span></h2><span
                                             class="text-muted text-uppercase small">技术类文章</span>
                                         <hr>
@@ -162,7 +163,7 @@
 <!-- JavaScript files-->
 <div th:include="common :: footer"></div>
 
-<script src="/js/charts-home.js"></script>
+<script src="/js/home.js"></script>
 
 </body>
 </html>
