--- a/src/main/resources/templates/mlog/publish.html
+++ b/src/main/resources/templates/mlog/publish.html
@@ -19,32 +19,35 @@
         <div class="container-fluid px-xl-3 py-3">
             <div class="container"></div>
             <div class="row ">
-                <div class="col-lg-6 mb-3">
-                    <input class="form-control "
+                <div class="col-lg-8 mb-3">
+                    <input name="title" class="form-control "
                            type="text" placeholder="请输入文章题目">
                 </div>
-                <div class="mb-3 col-lg-2">
-
-                    <select class="form-control ">
-                        <option selected value="1">生活</option>
+                <div class="mb-3 selected col-lg-1">
+                    <select name="type" class="form-control " autocomplete="off">
+                        <option value="1">生活</option>
                         <option value="2">技术</option>
                         <option value="3">杂记</option>
                     </select>
-
                 </div>
-                <div class="mb-3 col-lg-4">
-                    <button class="btn btn-primary" type="button">保存草稿(ctrl+s)</button>
-                    <button type="button " class="btn btn-green">发布</button>
-                    <button type="button " class="btn btn-green">设置</button>
+                <div class="mb-3 col-lg-3">
+                    <button class="btn btn-primary" type="button" id="save" onclick="saveArticle()">保存(ctrl+s)</button>
+                    <button type="button " class="btn btn-green" onclick="publishArticle()">发布</button>
+                    <button type="button " class="btn btn-green" onclick="setting()">设置</button>
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-group mb-3 col-xl-6">
+                <div class="col-lg-8 mb-3">
+                    <input name="abstractText" class="form-control "
+                           type="text" placeholder="用一句话描述文章摘要">
+                </div>
+                <div class="input-group mb-3 col-xl-4">
                     <input class="form-control js-tags-input" type="text" id="tags" name="tags"
                            placeholder="请输入标签"
                            value="MLog">
                 </div>
+
             </div>
             <div class="form-group" id="editor">
                             <textarea class="col-xl-12" style="display:none;">### 关于 Editor.md
@@ -52,13 +55,14 @@
 **Editor.md** 是一款开源的、可嵌入的 Markdown 在线编辑器（组件），基于 CodeMirror、jQuery 和 Marked 构建。
     </textarea>
             </div>
-
+<form></form>
         </div>
     </div>
 </div>
 <div th:include="common :: footer"></div>
 <script src="/js/jquery.tagsinput.min.js"></script>
 <script src="/js/publish.js"></script>
+<script src="/layuiSimpleBlog/res/layui/layui.all.js"></script>
 <script src="/js/uploadImage.js"></script>
 <script src="/editor.md-v1.5/editormd.js"></script>
 </body>
