--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,1 +1,211 @@
 /* your styles go here */
+.checkbox-inline, .radio-inline {
+    display: inline-block;
+}
+.form-horizontal .lyear-radio.radio-inline,
+.form-horizontal .lyear-checkbox.checkbox-inline {
+    padding-top: 0px;
+    margin-top: 8px;
+}
+
+/* å¼€å…³ */
+.lyear-switch {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 0;
+}
+.lyear-switch input {
+    height: 0;
+    width: 0;
+    position: absolute;
+    opacity: 0;
+}
+.lyear-switch span {
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background-color: #ebebeb;
+    border: 2px solid #ebebeb;
+    cursor: pointer;
+    -webkit-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease
+}
+.lyear-switch span:after {
+    content: '';
+    height: 20px;
+    width: 20px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    position: absolute;
+    left: 1px;
+    top: -7px;
+    color: #aaa;
+    -webkit-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease;
+    text-align: center;
+    font-size: 13px;
+    background-color: #fff;
+    -webkit-box-shadow: rgba(0,0,0,.12) 0 1px 6px,rgba(0,0,0,.12) 0 1px 4px;
+    box-shadow: rgba(0,0,0,.12) 0 1px 6px,rgba(0,0,0,.12) 0 1px 4px
+}
+.lyear-switch input:checked~span:after {
+    left: -webkit-calc(100% - 20px);
+    left: calc(100% - 20px);
+}
+.switch-primary input:checked~span:after {
+    background-color: #33cabb
+}
+.switch-success input:checked~span:after {
+    background-color: #15c377
+}
+.switch-info input:checked~span:after {
+    background-color: #48b0f7
+}
+.switch-warning input:checked~span:after {
+    background-color: #faa64b
+}
+.switch-danger input:checked~span:after {
+    background-color: #f96868
+}
+.switch-secondary input:checked~span:after {
+    background-color: #868e96
+}
+.switch-dark input:checked~span:after {
+    background-color: #465161
+}
+.switch-purple input:checked~span:after {
+    background-color: #926dde
+}
+.switch-pink input:checked~span:after {
+    background-color: #f96197
+}
+.switch-cyan input:checked~span:after {
+    background-color: #57c7d4
+}
+.switch-yellow input:checked~span:after {
+    background-color: #fcc525
+}
+.switch-brown input:checked~span:after {
+    background-color: #8d6658
+}
+
+.lyear-switch.switch-solid span,
+.lyear-switch.switch-light span,
+.lyear-switch.switch-outline span {
+    height: 20px;
+}
+.lyear-switch.switch-solid span:after,
+.lyear-switch.switch-light span:after,
+.lyear-switch.switch-outline span:after {
+    top: -2px;
+}
+.lyear-switch.switch-outline span {
+    background-color: #fff
+}
+.switch-solid.switch-primary input:checked~span {
+    background-color: #33cabb;
+    border-color: #33cabb
+}
+.switch-solid.switch-primary input:checked~span:after {
+    background-color: #fff;
+    color: #33cabb
+}
+.switch-solid.switch-success input:checked~span {
+    background-color: #15c377;
+    border-color: #15c377
+}
+.switch-solid.switch-success input:checked~span:after {
+    background-color: #fff;
+    color: #15c377
+}
+.switch-solid.switch-info input:checked~span {
+    background-color: #48b0f7;
+    border-color: #48b0f7
+}
+.switch-solid.switch-info input:checked~span:after {
+    background-color: #fff;
+    color: #48b0f7
+}
+.switch-solid.switch-warning input:checked~span {
+    background-color: #faa64b;
+    border-color: #faa64b
+}
+.switch-solid.switch-warning input:checked~span:after {
+    background-color: #fff;
+    color: #faa64b
+}
+.switch-solid.switch-danger input:checked~span {
+    background-color: #f96868;
+    border-color: #f96868
+}
+.switch-solid.switch-danger input:checked~span:after {
+    background-color: #fff;
+    color: #f96868
+}
+.switch-solid.switch-secondary input:checked~span {
+    background-color: #868e96;
+    border-color: #868e96
+}
+.switch-solid.switch-secondary input:checked~span:after {
+    background-color: #fff;
+    color: #868e96
+}
+.switch-solid.switch-dark input:checked~span {
+    background-color: #465161;
+    border-color: #465161
+}
+.switch-solid.switch-dark input:checked~span:after {
+    background-color: #fff;
+    color: #465161
+}
+.switch-solid.switch-purple input:checked~span {
+    background-color: #926dde;
+    border-color: #926dde
+}
+.switch-solid.switch-purple input:checked~span:after {
+    background-color: #fff;
+    color: #926dde
+}
+.switch-solid.switch-pink input:checked~span {
+    background-color: #f96197;
+    border-color: #f96197
+}
+.switch-solid.switch-pink input:checked~span:after {
+    background-color: #fff;
+    color: #f96197
+}
+.switch-solid.switch-cyan input:checked~span {
+    background-color: #57c7d4;
+    border-color: #57c7d4
+}
+.switch-solid.switch-cyan input:checked~span:after {
+    background-color: #fff;
+    color: #57c7d4
+}
+.switch-solid.switch-yellow input:checked~span {
+    background-color: #fcc525;
+    border-color: #fcc525
+}
+.switch-solid.switch-yellow input:checked~span:after {
+    background-color: #fff;
+    color: #fcc525
+}
+.switch-solid.switch-brown input:checked~span {
+    background-color: #8d6658;
+    border-color: #8d6658
+}
+.switch-solid.switch-brown input:checked~span:after {
+    background-color: #fff;
+    color: #8d6658
+}
