--- a/src/main/resources/templates/mlog/publish.html
+++ b/src/main/resources/templates/mlog/publish.html
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="col-xl-4">
                                     <label class="lyear-switch switch-solid switch-yellow">
-                                        <input name="ontop" type="checkbox" value="0">
+                                        <input name="ontop" type="checkbox" value="1">
                                         <span></span>
                                     </label>
                                 </div>
@@ -89,10 +89,8 @@
                 <div id="links"></div>
             </div>
             <div class="form-group" id="editor">
-                            <textarea class="col-xl-12" style="display:none;">### 关于 Editor.md
-
-**Editor.md** 是一款开源的、可嵌入的 Markdown 在线编辑器（组件），基于 CodeMirror、jQuery 和 Marked 构建。
-    </textarea>
+                  <textarea class="col-xl-12" style="display:none;">
+                 </textarea>
             </div>
             <form></form>
         </div>
