文章自定义url拦截器

--- a/src/main/resources/templates/mlog/comment.html
+++ b/src/main/resources/templates/mlog/comment.html
@@ -13,7 +13,7 @@
 <header class="header" th:include="common :: header">
 </header>
 <div class="d-flex align-items-stretch">
-    <div id="sidebar" class="sidebar py-3" th:include="common :: sidebar">
+    <div id="sidebar" class="sidebar py-3 shrink show" th:include="common :: sidebar">
     </div>
     <div class="page-holder w-100 d-flex flex-wrap">
         <div class="container-fluid px-xl-5">
