--- a/src/main/resources/templates/mlog/index.html
+++ b/src/main/resources/templates/mlog/index.html
@@ -56,9 +56,9 @@
                             <div class="flex-grow-1 d-flex align-items-center">
                                 <div class="dot mr-3 bg-success"></div>
                                 <div class="text">
-
+                                    <a href="/mlog/comment" target="_self">
                                     <h6 class="mb-0">评论 总数</h6><span class="text-gray comment">145,14 </span>
-
+                                    </a>
                                 </div>
                             </div>
                             <div class="icon text-white bg-success"><i class="fas fa-comments"></i></div>
